--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,10 +28,8 @@ Suggests:
 Published: 2026-02-16
 NeedsCompilation: no
 Materials: README, NEWS
-CRAN checks: 
-Documentation:
-Reference manual: 
-Vignettes:
-Downloads:
+Documentation: https://github.com/WhiteSymmetry/graycoder/blob/main/graycode-manual.pdf
+Reference manual: https://github.com/WhiteSymmetry/graycoder/blob/main/graycode-manual.pdf
+Downloads: https://github.com/whitesymmetry/grikodr
 Package source: graycode_0.1.0.tar.gz
 Config/testthat/edition: 3
