--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -32,8 +32,7 @@ jobs:
       - name: Set up R ${{ matrix.r-version }}
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.r-version }}
-          http-user-agent: release
+          r-version: '${{ matrix.r-version }}'
       
       - name: Cache R packages
         uses: actions/cache@v4
@@ -42,14 +41,8 @@ jobs:
           key: ${{ runner.os }}-r-${{ matrix.r-version }}-${{ hashFiles('DESCRIPTION') }}
       
       - name: Install system dependencies
-        uses: r-lib/actions/setup-r-dependencies@v3
+        uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
-      
-      - name: Install dependencies
-        uses: r-lib/actions/install-r-package@v1
-        with:
-          use-repos: "https://packagemanager.rstudio.com/cran/__linux__/jammy/latest"
           extra-packages: any::rcmdcheck
       
       - name: Check
