--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Check
         uses: r-lib/actions/check-r-package@v2
         with:
-          args: '--no-manual'
+          args: '--no-manual --no-build-vignettes'
